--- a/Shell/fileDir.html
+++ b/Shell/fileDir.html
@@ -83,7 +83,7 @@
 
         <nav id="sidebar" class="sidebar" aria-label="Table of contents">
             <div class="sidebar-scrollbox">
-                <ol class="chapter"><li class="chapter-item expanded "><a href="../Labs/Introduction.html"><strong aria-hidden="true">1.</strong> Labs</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../Multi-ThreadedScripting-ProcessManagement/Multi-ThreadedScripting-ProcessManagement.html"><strong aria-hidden="true">1.1.</strong> Multi-Threaded Scripting &amp; Process Management</a></li><li class="chapter-item expanded "><a href="../Learning_C/Learning_C.html"><strong aria-hidden="true">1.2.</strong> Learning C</a></li><li class="chapter-item expanded "><a href="../SystemCalls/SystemCalls.html"><strong aria-hidden="true">1.3.</strong> System Calls</a></li><li class="spacer"></li></ol></li><li class="chapter-item expanded "><a href="../Shell/shell.html"><strong aria-hidden="true">2.</strong> Shell</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../Shell/installation.html"><strong aria-hidden="true">2.1.</strong> Installation</a></li><li class="chapter-item expanded "><a href="../Shell/introducing_shell.html"><strong aria-hidden="true">2.2.</strong> Introducing the Shell</a></li><li class="chapter-item expanded "><a href="../Shell/fileDir.html" class="active"><strong aria-hidden="true">2.3.</strong> Navigating File and Directories</a></li><li class="chapter-item expanded "><a href="../Shell/create.html"><strong aria-hidden="true">2.4.</strong> Working with FIles and Directories</a></li><li class="chapter-item expanded "><a href="../Shell/pipefilter.html"><strong aria-hidden="true">2.5.</strong> Pipes and Filters</a></li><li class="chapter-item expanded "><a href="../Shell/loops.html"><strong aria-hidden="true">2.6.</strong> Loop</a></li><li class="chapter-item expanded "><a href="../Shell/scripts.html"><strong aria-hidden="true">2.7.</strong> Scripts</a></li><li class="chapter-item expanded "><a href="../Shell/find.html"><strong aria-hidden="true">2.8.</strong> Finding Things</a></li><li class="chapter-item expanded "><a href="../Shell/reference.html"><strong aria-hidden="true">2.9.</strong> Summary of Basic Commands</a></li></ol></li><li class="chapter-item expanded "><a href="../Shell_Extras/introduction.html"><strong aria-hidden="true">3.</strong> Extra Shell</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../Shell_Extras/manfiles.html"><strong aria-hidden="true">3.1.</strong> Manual Pages</a></li><li class="chapter-item expanded "><a href="../Shell_Extras/workremote.html"><strong aria-hidden="true">3.2.</strong> Working Remotely</a></li><li class="chapter-item expanded "><a href="../Shell_Extras/permissions.html"><strong aria-hidden="true">3.3.</strong> Permissions</a></li><li class="chapter-item expanded "><a href="../Shell_Extras/dirstruct.html"><strong aria-hidden="true">3.4.</strong> Working with Files and Directories</a></li><li class="chapter-item expanded "><a href="../Shell_Extras/jobs.html"><strong aria-hidden="true">3.5.</strong> Job Control</a></li><li class="chapter-item expanded "><a href="../Shell_Extras/aliases.html"><strong aria-hidden="true">3.6.</strong> Aliases and bash customisation</a></li><li class="chapter-item expanded "><a href="../Shell_Extras/shellvars.html"><strong aria-hidden="true">3.7.</strong> Shell Variables</a></li><li class="chapter-item expanded "><a href="../Shell_Extras/references.html"><strong aria-hidden="true">3.8.</strong> Summary of Commands</a></li></ol></li></ol>            </div>
+                <ol class="chapter"><li class="chapter-item expanded "><a href="../Labs/Introduction.html"><strong aria-hidden="true">1.</strong> Labs</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../Multi-ThreadedScripting-ProcessManagement/Multi-ThreadedScripting-ProcessManagement.html"><strong aria-hidden="true">1.1.</strong> Multi-Threaded Scripting &amp; Process Management</a></li><li class="chapter-item expanded "><a href="../Learning_C/Learning_C.html"><strong aria-hidden="true">1.2.</strong> Learning C</a></li><li class="chapter-item expanded "><a href="../SystemCalls/SystemCalls.html"><strong aria-hidden="true">1.3.</strong> System Calls</a></li><li class="chapter-item expanded "><div><strong aria-hidden="true">1.4.</strong> Exploring Directories</div></li><li class="spacer"></li></ol></li><li class="chapter-item expanded "><a href="../Shell/shell.html"><strong aria-hidden="true">2.</strong> Shell</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../Shell/installation.html"><strong aria-hidden="true">2.1.</strong> Installation</a></li><li class="chapter-item expanded "><a href="../Shell/introducing_shell.html"><strong aria-hidden="true">2.2.</strong> Introducing the Shell</a></li><li class="chapter-item expanded "><a href="../Shell/fileDir.html" class="active"><strong aria-hidden="true">2.3.</strong> Navigating File and Directories</a></li><li class="chapter-item expanded "><a href="../Shell/create.html"><strong aria-hidden="true">2.4.</strong> Working with FIles and Directories</a></li><li class="chapter-item expanded "><a href="../Shell/pipefilter.html"><strong aria-hidden="true">2.5.</strong> Pipes and Filters</a></li><li class="chapter-item expanded "><a href="../Shell/loops.html"><strong aria-hidden="true">2.6.</strong> Loop</a></li><li class="chapter-item expanded "><a href="../Shell/scripts.html"><strong aria-hidden="true">2.7.</strong> Scripts</a></li><li class="chapter-item expanded "><a href="../Shell/find.html"><strong aria-hidden="true">2.8.</strong> Finding Things</a></li><li class="chapter-item expanded "><a href="../Shell/reference.html"><strong aria-hidden="true">2.9.</strong> Summary of Basic Commands</a></li></ol></li><li class="chapter-item expanded "><a href="../Shell_Extras/introduction.html"><strong aria-hidden="true">3.</strong> Extra Shell</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../Shell_Extras/manfiles.html"><strong aria-hidden="true">3.1.</strong> Manual Pages</a></li><li class="chapter-item expanded "><a href="../Shell_Extras/workremote.html"><strong aria-hidden="true">3.2.</strong> Working Remotely</a></li><li class="chapter-item expanded "><a href="../Shell_Extras/permissions.html"><strong aria-hidden="true">3.3.</strong> Permissions</a></li><li class="chapter-item expanded "><a href="../Shell_Extras/dirstruct.html"><strong aria-hidden="true">3.4.</strong> Working with Files and Directories</a></li><li class="chapter-item expanded "><a href="../Shell_Extras/jobs.html"><strong aria-hidden="true">3.5.</strong> Job Control</a></li><li class="chapter-item expanded "><a href="../Shell_Extras/aliases.html"><strong aria-hidden="true">3.6.</strong> Aliases and bash customisation</a></li><li class="chapter-item expanded "><a href="../Shell_Extras/shellvars.html"><strong aria-hidden="true">3.7.</strong> Shell Variables</a></li><li class="chapter-item expanded "><a href="../Shell_Extras/references.html"><strong aria-hidden="true">3.8.</strong> Summary of Commands</a></li></ol></li></ol>            </div>
             <div id="sidebar-resize-handle" class="sidebar-resize-handle"></div>
         </nav>
 
@@ -151,24 +151,17 @@
 <h4 id="questions"><a class="header" href="#questions">Questions:</a></h4>
 <blockquote>
 <ul>
-<li>How can I move around on my computer?
-&gt;</li>
-<li>How can I see what files and directories I have?
-&gt;</li>
+<li>How can I move around on my computer?</li>
+<li>How can I see what files and directories I have?</li>
 <li>How can I specify the location of a file or directory on my computer?</li>
 </ul>
 </blockquote>
 <h4 id="objectives"><a class="header" href="#objectives">Objectives:</a></h4>
 <blockquote>
 <ul>
-<li>Explain the similarities and differences between a file and a directory.
-&gt;</li>
-<li>Translate an absolute path into a relative path and vice versa.
-&gt;</li>
-<li>Construct absolute and relative paths that identify specific files and directories.
-&gt;</li>
-<li>Use options and arguments to change the behaviour of a shell command.
-&gt;</li>
+<li>Explain the similarities and differences between a file and a directory.</li>
+<li>Translate an absolute path into a relative path and vice versa.</li>
+<li>Use options and arguments to change the behaviour of a shell command.</li>
 <li>Demonstrate the use of tab completion and explain its advantages.</li>
 </ul>
 </blockquote>
@@ -178,28 +171,17 @@
 <p></p>
 <blockquote>
 <ul>
-<li>The file system is responsible for managing information on the disk.
-&gt;</li>
-<li>Information is stored in files, which are stored in directories (folders).
-&gt;</li>
-<li>Directories can also store other directories, which then form a directory tree.
-&gt;</li>
-<li><code>pwd</code> prints the user's current working directory.
-&gt;</li>
-<li><code>ls [path]</code> prints a listing of a specific file or directory; <code>ls</code> on its own lists the current working directory.
-&gt;</li>
-<li><code>cd [path]</code> changes the current working directory.
-&gt;</li>
-<li>Most commands take options that begin with a single <code>-</code>.
-&gt;</li>
-<li>Directory names in a path are separated with <code>/</code> on Unix, but <code>\\</code> on Windows.
-&gt;</li>
-<li><code>/</code> on its own is the root directory of the whole file system.
-&gt;</li>
-<li>An absolute path specifies a location from the root of the file system.
-&gt;</li>
-<li>A relative path specifies a location starting from the current location.
-&gt;</li>
+<li>The file system is responsible for managing information on the disk.</li>
+<li>Information is stored in files, which are stored in directories (folders).</li>
+<li>Directories can also store other directories, which then form a directory tree.</li>
+<li><code>pwd</code> prints the user's current working directory.</li>
+<li><code>ls [path]</code> prints a listing of a specific file or directory; <code>ls</code> on its own lists the current working directory.</li>
+<li><code>cd [path]</code> changes the current working directory.</li>
+<li>Most commands take options that begin with a single <code>-</code>.</li>
+<li>Directory names in a path are separated with <code>/</code> on Unix, but <code>\\</code> on Windows.</li>
+<li><code>/</code> on its own is the root directory of the whole file system.</li>
+<li>An absolute path specifies a location from the root of the file system.</li>
+<li>A relative path specifies a location starting from the current location.</li>
 <li><code>.</code> on its own means 'the current directory'; <code>..</code> means 'the directory above the current one'.</li>
 </ul>
 </blockquote>
@@ -323,7 +305,7 @@ Mandatory arguments to long options are mandatory for short options, too.
       --color[=WHEN]         colorize the output; WHEN can be 'always' (default
                                if omitted), 'auto', or 'never'; more info below
   -d, --directory            list directories themselves, not their contents
-  -D, --dired                generate output designed for Emacs' dired mode
+  -D, --dired                generate output designed for 'Emacs' dired mode
   -f                         do not sort, enable -aU, disable -ls --color
   -F, --classify             append indicator (one of */=&gt;@|) to entries
 ...        ...        ...
