--- a/Shell/installation.html
+++ b/Shell/installation.html
@@ -83,7 +83,7 @@
 
         <nav id="sidebar" class="sidebar" aria-label="Table of contents">
             <div class="sidebar-scrollbox">
-                <ol class="chapter"><li class="chapter-item expanded "><a href="../Labs/Introduction.html"><strong aria-hidden="true">1.</strong> Labs</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../Multi-ThreadedScripting-ProcessManagement/Multi-ThreadedScripting-ProcessManagement.html"><strong aria-hidden="true">1.1.</strong> Multi-Threaded Scripting &amp; Process Management</a></li><li class="chapter-item expanded "><a href="../Learning_C/Learning_C.html"><strong aria-hidden="true">1.2.</strong> Learning C</a></li><li class="chapter-item expanded "><a href="../SystemCalls/SystemCalls.html"><strong aria-hidden="true">1.3.</strong> System Calls</a></li><li class="spacer"></li></ol></li><li class="chapter-item expanded "><a href="../Shell/shell.html"><strong aria-hidden="true">2.</strong> Shell</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../Shell/installation.html" class="active"><strong aria-hidden="true">2.1.</strong> Installation</a></li><li class="chapter-item expanded "><a href="../Shell/introducing_shell.html"><strong aria-hidden="true">2.2.</strong> Introducing the Shell</a></li><li class="chapter-item expanded "><a href="../Shell/fileDir.html"><strong aria-hidden="true">2.3.</strong> Navigating File and Directories</a></li><li class="chapter-item expanded "><a href="../Shell/create.html"><strong aria-hidden="true">2.4.</strong> Working with FIles and Directories</a></li><li class="chapter-item expanded "><a href="../Shell/pipefilter.html"><strong aria-hidden="true">2.5.</strong> Pipes and Filters</a></li><li class="chapter-item expanded "><a href="../Shell/loops.html"><strong aria-hidden="true">2.6.</strong> Loop</a></li><li class="chapter-item expanded "><a href="../Shell/scripts.html"><strong aria-hidden="true">2.7.</strong> Scripts</a></li><li class="chapter-item expanded "><a href="../Shell/find.html"><strong aria-hidden="true">2.8.</strong> Finding Things</a></li><li class="chapter-item expanded "><a href="../Shell/reference.html"><strong aria-hidden="true">2.9.</strong> Summary of Basic Commands</a></li></ol></li><li class="chapter-item expanded "><a href="../Shell_Extras/introduction.html"><strong aria-hidden="true">3.</strong> Extra Shell</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../Shell_Extras/manfiles.html"><strong aria-hidden="true">3.1.</strong> Manual Pages</a></li><li class="chapter-item expanded "><a href="../Shell_Extras/workremote.html"><strong aria-hidden="true">3.2.</strong> Working Remotely</a></li><li class="chapter-item expanded "><a href="../Shell_Extras/permissions.html"><strong aria-hidden="true">3.3.</strong> Permissions</a></li><li class="chapter-item expanded "><a href="../Shell_Extras/dirstruct.html"><strong aria-hidden="true">3.4.</strong> Working with Files and Directories</a></li><li class="chapter-item expanded "><a href="../Shell_Extras/jobs.html"><strong aria-hidden="true">3.5.</strong> Job Control</a></li><li class="chapter-item expanded "><a href="../Shell_Extras/aliases.html"><strong aria-hidden="true">3.6.</strong> Aliases and bash customisation</a></li><li class="chapter-item expanded "><a href="../Shell_Extras/shellvars.html"><strong aria-hidden="true">3.7.</strong> Shell Variables</a></li><li class="chapter-item expanded "><a href="../Shell_Extras/references.html"><strong aria-hidden="true">3.8.</strong> Summary of Commands</a></li></ol></li></ol>            </div>
+                <ol class="chapter"><li class="chapter-item expanded "><a href="../Labs/Introduction.html"><strong aria-hidden="true">1.</strong> Labs</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../Multi-ThreadedScripting-ProcessManagement/Multi-ThreadedScripting-ProcessManagement.html"><strong aria-hidden="true">1.1.</strong> Multi-Threaded Scripting &amp; Process Management</a></li><li class="chapter-item expanded "><a href="../Learning_C/Learning_C.html"><strong aria-hidden="true">1.2.</strong> Learning C</a></li><li class="chapter-item expanded "><a href="../SystemCalls/SystemCalls.html"><strong aria-hidden="true">1.3.</strong> System Calls</a></li><li class="chapter-item expanded "><div><strong aria-hidden="true">1.4.</strong> Exploring Directories</div></li><li class="spacer"></li></ol></li><li class="chapter-item expanded "><a href="../Shell/shell.html"><strong aria-hidden="true">2.</strong> Shell</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../Shell/installation.html" class="active"><strong aria-hidden="true">2.1.</strong> Installation</a></li><li class="chapter-item expanded "><a href="../Shell/introducing_shell.html"><strong aria-hidden="true">2.2.</strong> Introducing the Shell</a></li><li class="chapter-item expanded "><a href="../Shell/fileDir.html"><strong aria-hidden="true">2.3.</strong> Navigating File and Directories</a></li><li class="chapter-item expanded "><a href="../Shell/create.html"><strong aria-hidden="true">2.4.</strong> Working with FIles and Directories</a></li><li class="chapter-item expanded "><a href="../Shell/pipefilter.html"><strong aria-hidden="true">2.5.</strong> Pipes and Filters</a></li><li class="chapter-item expanded "><a href="../Shell/loops.html"><strong aria-hidden="true">2.6.</strong> Loop</a></li><li class="chapter-item expanded "><a href="../Shell/scripts.html"><strong aria-hidden="true">2.7.</strong> Scripts</a></li><li class="chapter-item expanded "><a href="../Shell/find.html"><strong aria-hidden="true">2.8.</strong> Finding Things</a></li><li class="chapter-item expanded "><a href="../Shell/reference.html"><strong aria-hidden="true">2.9.</strong> Summary of Basic Commands</a></li></ol></li><li class="chapter-item expanded "><a href="../Shell_Extras/introduction.html"><strong aria-hidden="true">3.</strong> Extra Shell</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../Shell_Extras/manfiles.html"><strong aria-hidden="true">3.1.</strong> Manual Pages</a></li><li class="chapter-item expanded "><a href="../Shell_Extras/workremote.html"><strong aria-hidden="true">3.2.</strong> Working Remotely</a></li><li class="chapter-item expanded "><a href="../Shell_Extras/permissions.html"><strong aria-hidden="true">3.3.</strong> Permissions</a></li><li class="chapter-item expanded "><a href="../Shell_Extras/dirstruct.html"><strong aria-hidden="true">3.4.</strong> Working with Files and Directories</a></li><li class="chapter-item expanded "><a href="../Shell_Extras/jobs.html"><strong aria-hidden="true">3.5.</strong> Job Control</a></li><li class="chapter-item expanded "><a href="../Shell_Extras/aliases.html"><strong aria-hidden="true">3.6.</strong> Aliases and bash customisation</a></li><li class="chapter-item expanded "><a href="../Shell_Extras/shellvars.html"><strong aria-hidden="true">3.7.</strong> Shell Variables</a></li><li class="chapter-item expanded "><a href="../Shell_Extras/references.html"><strong aria-hidden="true">3.8.</strong> Summary of Commands</a></li></ol></li></ol>            </div>
             <div id="sidebar-resize-handle" class="sidebar-resize-handle"></div>
         </nav>
 
@@ -164,23 +164,63 @@
 &gt;&gt;
 <img src="./fig/jh-server.png" alt="" />
 &gt;&gt;</li>
-<li>Once server has started <kbd>Right Click</kbd> File Browser view and create a new folder called <code>FCC</code>
+<li>Once server has started <kbd>Right Click</kbd> File Browser view and create a new folder called <code>NOS</code>
 &gt;&gt;</li>
-<li><kbd>Double Click</kbd> <code>FCC</code> and select the upload files icon to upload the <code>shell-lesson-data.zip</code>. Alternatively you can drag the <code>shell-lesson-data.zip</code> from your host machine to the file browser in jupyter hub to upload it. 
+<li><kbd>Double Click</kbd> <code>NOS</code> and select the upload files icon to upload the <code>shell-lesson-data.zip</code>. Alternatively you can drag the <code>shell-lesson-data.zip</code> from your host machine to the file browser in jupyter hub to upload it. 
 &gt;&gt;</li>
 <li>Next select from the <code>Launcher</code> window the 'Terminal' icon to load a terminal. 
-&gt;&gt;
-<img src=".fig/../fig/jh-terminal-launch.png" alt="" /> 
+&gt;&gt;<img src=".fig/../fig/jh-terminal-launch.png" alt="" /> 
 &gt;&gt;</li>
 <li>Now you can navigate to the correct directory using the following commands, note we will be going over what these mean at a later date. 
-<pre><code class="language-bash">cd FCC
+<pre><code class="language-bash">$ cd NOS
 </code></pre>
-<pre><code class="language-bash">unzip shell-lesson-data.zip &amp;&amp; rm shell-lesson-data.zip 
+<pre><code class="language-bash">$ unzip shell-lesson-data.zip &amp;&amp; rm shell-lesson-data.zip 
 </code></pre>
-You should see something like this on your terminal...
-&gt;&gt;
-<img src="./fig/jh-unzip.png" alt="" />
-&gt;&gt;</li>
+You should see something like this on your terminal...</li>
+</ol>
+<pre><code class="language-sh">jovyan@jupyter-seb-20blair:~/NOS$ unzip shell-lesson-data.zip 
+Archive:  shell-lesson-data.zip
+   creating: shell-lesson-data/
+   creating: shell-lesson-data/exercise-data/
+   creating: shell-lesson-data/exercise-data/writing/
+  inflating: shell-lesson-data/exercise-data/writing/LittleWomen.txt  
+  inflating: shell-lesson-data/exercise-data/writing/haiku.txt  
+   creating: shell-lesson-data/exercise-data/animal-counts/
+  inflating: shell-lesson-data/exercise-data/animal-counts/animals.csv  
+   creating: shell-lesson-data/exercise-data/proteins/
+  inflating: shell-lesson-data/exercise-data/proteins/ethane.pdb  
+  inflating: shell-lesson-data/exercise-data/proteins/propane.pdb  
+  inflating: shell-lesson-data/exercise-data/proteins/cubane.pdb  
+  inflating: shell-lesson-data/exercise-data/proteins/octane.pdb  
+  inflating: shell-lesson-data/exercise-data/proteins/methane.pdb  
+  inflating: shell-lesson-data/exercise-data/proteins/pentane.pdb  
+   creating: shell-lesson-data/exercise-data/creatures/
+  inflating: shell-lesson-data/exercise-data/creatures/basilisk.dat  
+  inflating: shell-lesson-data/exercise-data/creatures/unicorn.dat  
+  inflating: shell-lesson-data/exercise-data/creatures/minotaur.dat  
+ extracting: shell-lesson-data/exercise-data/numbers.txt  
+   creating: shell-lesson-data/north-pacific-gyre/
+  inflating: shell-lesson-data/north-pacific-gyre/NENE02040A.txt  
+  inflating: shell-lesson-data/north-pacific-gyre/NENE01843A.txt  
+  inflating: shell-lesson-data/north-pacific-gyre/goostats.sh  
+  inflating: shell-lesson-data/north-pacific-gyre/NENE01729A.txt  
+  inflating: shell-lesson-data/north-pacific-gyre/NENE02018B.txt  
+  inflating: shell-lesson-data/north-pacific-gyre/NENE02043A.txt  
+  inflating: shell-lesson-data/north-pacific-gyre/NENE01751A.txt  
+  inflating: shell-lesson-data/north-pacific-gyre/NENE02040Z.txt  
+  inflating: shell-lesson-data/north-pacific-gyre/NENE01812A.txt  
+  inflating: shell-lesson-data/north-pacific-gyre/NENE01971Z.txt  
+  inflating: shell-lesson-data/north-pacific-gyre/NENE02043B.txt  
+  inflating: shell-lesson-data/north-pacific-gyre/goodiff.sh  
+  inflating: shell-lesson-data/north-pacific-gyre/NENE01843B.txt  
+  inflating: shell-lesson-data/north-pacific-gyre/NENE01751B.txt  
+  inflating: shell-lesson-data/north-pacific-gyre/NENE01978B.txt  
+  inflating: shell-lesson-data/north-pacific-gyre/NENE01729B.txt  
+  inflating: shell-lesson-data/north-pacific-gyre/NENE01978A.txt  
+  inflating: shell-lesson-data/north-pacific-gyre/NENE02040B.txt  
+  inflating: shell-lesson-data/north-pacific-gyre/NENE01736A.txt  
+</code></pre>
+<ol>
 <li>Ok good job, you are ready for lab exercises. </li>
 </ol>
 <p><a href="shell.html">Back to Contents Page</a></p>
